<resources>
    <string name="app_name">fitnesiarz</string>
    <string name="enter_weight">Podaj wagę (kg)</string>
    <string name="enter_height">Podaj wzrost (m)</string>
    <string name="enter_height2">Podaj wzrost (cm)</string>
    <string name="bmi">Wynik BMI: </string>
    <string name="oblicz_bmi">Oblicz BMI</string>
    <string name="sprawdz_kcal">sprawdź ile możesz zjeść</string>
    <string name="zobacz_jedzenie">Zobacz co mozesz zjesc</string>
    <string name="enter_age">Podaj wiek </string>
    <string name="kcal">kcal</string>
    <string name="przepis">
        Spaghetti \n
        1.Na głębokiej patelni rozgrzej około 2 łyżki oliwy z oliwek.\n
        2. Na rozgrzaną patelnię wrzuć czosnek i cebulę, a po chwili dodaj mięso, rozdrabniaj je np. widelcem, tak aby nie powstały grube mięsne grudki.\n
        3. Do mięsa dodaj zioła oraz koncentrat. Całość podgrzewaj przez chwilę, dodaj passatę (przecier pomidorowy), gotuj na małym ogniu około 30 minut.\n
        4. Makaron ugotuj al dente, podawaj go z sosem, serem, i bazylią.\n \n \n
        Jajecznica po czesku\n
        Rozgrzej patelnię i połóż na niej masło. Gdy się roztopi, ostrożnie wbij trzy jajka - tak, by żółtka się nie uszkodziły. Posól je i popieprz. Białka możesz delikatnie mieszać drewnianą łyżką, ale nie dotykaj żółtek. Dopiero kiedy białka zetną się, rozwal żółtka i delikatnie przemieszaj. Po chwili zdejmij całość z ognia i poczekaj, aż dojdzie
    </string>
    <string name="facet">facet</string>
    <string name="kobieta">kobieta</string>
    <string name="enter_gender">Podaj płeć</string>

    <string name="correct_text">Correct!</string>
    <string name="incorrect_text">InCorrect!</string>
    <string name="first_score_text">Correct!</string>
    <string name="correct_toast_message">Correct!</string>
    <string name="incorrect_toast_message">InCorrect!</string>
    <string name="p1">Kawa przyczynia się do niedoborów magnezu??</string>
    <string name="p2">Brązowy cukier jest zdrowszy niż biały</string>
    <string name="p3">Czy zestawienie ogórków i pomidorów w jednej potrawie powoduje, że tracą one wartości odżywcze?</string>
    <string name="p4">Czy grejpfruty zawierają ujemne kalorie?</string>
    <string name="p5">Węglowodany złożone są uważane za "złe węglowodany" ponieważ nie mają wartości odżywczych.</string>
    <string name="p6">Picie 3 litrów wody jest zdrowe?</string>
    <string name="false1">Fałsz</string>
    <string name="true1">Prawda</string>
    <string name="display_score">Rozpocznij grę</string>
    <string name="Pytanie">Question Text</string>
</resources>
