<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >



    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblicz_bmi" />

    <Button
        android:id="@+id/button_allowed_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprawdz_kcal" />

    <Button
        android:id="@+id/button_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zobacz_jedzenie" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/malina"
        />

</LinearLayout>
