<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/weightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/weightTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_weight"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/heightEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/heightTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_height2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/ageEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="6"
        android:ems="10"
        android:layout_columnSpan="2"/>
    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_age"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="left"
        android:text="@string/kcal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />


</GridLayout>
